; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_DHT.c_DHT_load.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_DHT.c_DHT_load.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DHT_STATE_COOKIE_GLOBAL = common dso_local global i64 0, align 8
@dht_load_state_callback = common dso_local global i32 0, align 4
@DHT_STATE_COOKIE_TYPE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @DHT_load(i32* %0, i32* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 8, i64* %8, align 8
  %10 = load i64, i64* %7, align 8
  %11 = load i64, i64* %8, align 8
  %12 = icmp sgt i64 %10, %11
  br i1 %12, label %13, label %31

13:                                               ; preds = %3
  %14 = load i32*, i32** %6, align 8
  %15 = call i32 @lendian_to_host32(i64* %9, i32* %14)
  %16 = load i64, i64* %9, align 8
  %17 = load i64, i64* @DHT_STATE_COOKIE_GLOBAL, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %30

19:                                               ; preds = %13
  %20 = load i32, i32* @dht_load_state_callback, align 4
  %21 = load i32*, i32** %5, align 8
  %22 = load i32*, i32** %6, align 8
  %23 = load i64, i64* %8, align 8
  %24 = getelementptr inbounds i32, i32* %22, i64 %23
  %25 = load i64, i64* %7, align 8
  %26 = load i64, i64* %8, align 8
  %27 = sub nsw i64 %25, %26
  %28 = load i32, i32* @DHT_STATE_COOKIE_TYPE, align 4
  %29 = call i32 @load_state(i32 %20, i32* %21, i32* %24, i64 %27, i32 %28)
  store i32 %29, i32* %4, align 4
  br label %32

30:                                               ; preds = %13
  br label %31

31:                                               ; preds = %30, %3
  store i32 -1, i32* %4, align 4
  br label %32

32:                                               ; preds = %31, %19
  %33 = load i32, i32* %4, align 4
  ret i32 %33
}

declare dso_local i32 @lendian_to_host32(i64*, i32*) #1

declare dso_local i32 @load_state(i32, i32*, i32*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
